Added searchbar & unused filecard (w/ placeholder)

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+/*
+    ---------------
+    THEME GUIDLINES
+    ---------------
+    Primary Font - Josefin Sans
+    Secondary Font - Prompt
+    Main color for logo/text - #0084C6
+    Secondary color for background - #E4EAF1
+    Grey for boring stuff - #DDDDDD
+*/
+
+body {
+    color: #0084C6;
+    background-color: #E4EAF1;
+    font-weight: bold;
+    font-family: "Josefin Sans";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.searchbar-container {
+    padding: 10px;
+    border-radius: 12px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.vertically-center-no-padding {
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.searchbar-input-box-container {
+    padding-left: 10px;
+    padding-right: 7px;
+    width: 1000px;
 }
