--- a/webapp/styles/login.module.css
+++ b/webapp/styles/login.module.css
@@ -15,6 +15,11 @@
     text-align: center;
 }
 
+.logo-img {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .login-container {
     height: 400px;
     width: 500px;
