Consolidated related components

--- a/webapp/styles/global.css
+++ b/webapp/styles/global.css
@@ -13,6 +13,7 @@
     theme-contrast-blue-dark   | #b7cbe2      | for contrasting background
     theme-contrast-blue-light  | #cad8e7      | for contrasting background
     theme-grey                 | #dddddd      | for boring grey stuff
+    theme-grey-light           | #eeeeee      | for boring light grey stuff
 */
 
 body {
